<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HAI811I - TP1</string>
    <string name="info">Entrez vos coordonnées</string>
    <string name="prenom">Prénom :</string>
    <string name="nom">Nom :</string>
    <string name="age">Age :</string>
    <string name="competence">Domaine de compétence :</string>
    <string name="numTel">Numéro de téléphone :</string>
    <string name="valider">Valider</string>
    <string name="coordonne">Vos coordonnées :</string>
    <string name="avertissement">Veuillez rentrer tous les champs !</string>
    <string name="verif_titre">Confirmation de vos coordonnées</string>
    <string name="verif_msg">Est ce bien vos coordonnées ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="annulation">Vous avez annulé votre saisie.</string>
    <string name="infoAff">Affichage de vos coordonnées :</string>
    <string name="retour">Retour</string>
    <string name="accueil">Accueil</string>
    <string name="affFinal">Saisie terminé !\n\nVeuilez revenir à l\'écran d\'accueil.</string>
    <string name="appel">Appeler</string>
    <string name="affAppel">Voulez vous appeler ?</string>
    <string name="train">Train</string>
    <string name="saisie">Saisie</string>
    <string name="textTrain">Quel trajet voulez vous faire ?</string>
    <string name="ville_depart">Départ</string>
    <string name="ville_arrive">Arrivé</string>
    <string name="affichage_main">Que voulez vous faire ?</string>
    <string name="recherche">Rechercher</string>
    <string name="pas_trajet">"Pas de trajet pour "</string>
    <string name="francais">Français</string>
    <string name="anglais">Anglais</string>
    <string name="calendrier">Agenda</string>
    <string name="ajoutEv">Ajouter</string>
    <string name="evenement">Nouvel évènement</string>
    <string name="agenda">Agenda</string>
    <string name="pas_ev">Pas d\'évènement pour cette date</string>
    <string name="ajout_even">"Ajout effectué"</string>
    <string name="langage">🌐 FR</string>
    <string name="changed_language">Language switched to English</string>
    <string name="new_event_title">Bonjour ! nous sommes le</string>
    <string name="boite_supress">Supprimer l\'événement ?</string>
    <string name="supression">Supprimer</string>
</resources>