<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppelActivity">

    <TextView
        android:id="@+id/affichageAppel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/affAppel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/affichageTel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/affichageImage"
        app:layout_constraintVertical_bias="0.397"/>

    <ImageView
        android:id="@+id/affichageImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/affichageAppel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874"
        app:srcCompat="@drawable/appel" />

    <TextView
        android:id="@+id/affichageTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/affichageAppel"
        app:layout_constraintBottom_toTopOf="@+id/appel_button"/>


    <Button
        android:id="@+id/appel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green_500"
        android:text="@string/appel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accueil_bouton"
        app:layout_constraintTop_toBottomOf="@+id/affichageTel"
        app:layout_constraintTop_toTopOf="@+id/accueil_bouton"
        app:layout_constraintHorizontal_bias="0.210" />

    <Button
        android:id="@+id/accueil_bouton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/accueil"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/affichageTel"
        app:layout_constraintVertical_bias="0.461" />


</androidx.constraintlayout.widget.ConstraintLayout>